<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_show_on_map"
            android:icon="@drawable/ic_pin"
            android:title="@string/show_on_map"/>
        <item
            android:id="@+id/nav_show_photo"
            android:icon="@drawable/ic_picture"
            android:title="@string/show_photo"/>
        <item
            android:id="@+id/nav_show_new_burgers"
            android:icon="@drawable/ic_burger"
            android:title="@string/new_burgers"/>
        <item
            android:id="@+id/nav_show_favourite"
            android:icon="@drawable/ic_heart"
            android:title="@string/fav_places"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_share"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_callback"
                android:icon="@drawable/ic_message"
                android:title="@string/callback"/>
        </menu>
    </item>

</menu>
